--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
   <div class="section-atas" id="section-atas">
     
     <header>
-        <img src="Images\JudulCeritaKita.png" alt="Cerita Kita" style="width: 17em; height: auto;">
+        <img src="/CeritaKita/beranda/images/JudulCeritaKita.png" alt="Cerita Kita" style="width: 17em; height: auto;">
         <nav class="nav-links">
             <a href="#section-atas" class="active">Beranda</a>
             <a href="#tentang-kita" class="active">Tentang Kita</a>
