--- a/menurutmu.html
+++ b/menurutmu.html
@@ -151,8 +151,8 @@
     <header>
       <img src="images/KataMereka.png" alt="Kata Mereka" style="width: 20em; height: auto; margin-top: 1.7em; margin-left: 1.3em;"/>
       <nav class="nav-links">
-        <a href="homepage.html" class="active">Beranda</a>
-        <a href="homepage.html #tentang-kita" class="active">Tentang Kita</a>
+        <a href="index.html" class="active">Beranda</a>
+        <a href="index.html #tentang-kita" class="active">Tentang Kita</a>
         <a href="bacaan.html" class="active">Bacaan</a>
         <a href="menurutmu.html" class="active">Kata Mereka</a>
       </nav>
