--- a/action.html
+++ b/action.html
@@ -138,7 +138,7 @@
   </head>
   <body>
     <!-- Back Icon -->
-    <div class="back-icon" onclick="window.location.href='homepage.html'">
+    <div class="back-icon" onclick="window.location.href='index.html'">
       <i class="bi bi-arrow-left-circle"></i>
     </div>
 
