--- a/bacaan.html
+++ b/bacaan.html
@@ -106,8 +106,8 @@
     <header>
       <a href="bacaan.html"><img src="images/hading.png" alt="Bacaan" /></a>
       <nav class="nav-links">
-        <a href="homepage.html" class="active">Beranda</a>
-        <a href="homepage.html #tentang-kita" class="active">Tentang Kita</a>
+        <a href="index.html" class="active">Beranda</a>
+        <a href="index.html #tentang-kita" class="active">Tentang Kita</a>
         <a href="bacaan.html" class="active">Bacaan</a>
         <a href="menurutmu.html" class="active">Kata Mereka</a>
       </nav>
