--- a/komedi.html
+++ b/komedi.html
@@ -121,7 +121,7 @@
     </style>
   </head>
   <body>
-    <div class="back-icon" onclick="window.location.href='homepage.html'">
+    <div class="back-icon" onclick="window.location.href='index.html'">
       <i class="bi bi-arrow-left-circle"></i>
     </div>
 
