--- a/laskar-pelangi.html
+++ b/laskar-pelangi.html
@@ -150,8 +150,8 @@
     <!-- Header -->
     <header>
       <nav class="nav-links">
-        <a href="homepage.html" class="active">Beranda</a>
-        <a href="homepage.html #tentang-kita" class="active">Tentang Kita</a>
+        <a href="index.html" class="active">Beranda</a>
+        <a href="index.html #tentang-kita" class="active">Tentang Kita</a>
         <a href="bacaan.html" class="active">Bacaan</a>
         <a href="menurutmu.html" class="active">Kata Mereka</a>
       </nav>
